Fixes #14934 !strict. Removed z-index:0 from the transition animation css files. Thanks Doug for the patch.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@28299 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/transitions/cover.css
+++ b/mobile/themes/common/transitions/cover.css
@@ -11,7 +11,6 @@
 	-webkit-transform: translate3d(0%,0px,-1px) !important;
 }
 .mblCover.mblIn {
-	z-index: 0;
 	-webkit-transform: translate3d(100%,0px,0px) !important;
 }
 .mblCover.mblIn.mblReverse {
