--- a/mobile/themes/common/transitions/reveal.css
+++ b/mobile/themes/common/transitions/reveal.css
@@ -7,7 +7,6 @@
 	-webkit-transition-duration: .4s;
 }
 .mblReveal.mblOut {
-	z-index: 0;
 	-webkit-transform: translate3d(0%,0px,0px) !important;
 }
 .mblReveal.mblOut.mblTransition {
