--- a/mobile/themes/common/transitions/revealv.css
+++ b/mobile/themes/common/transitions/revealv.css
@@ -7,7 +7,6 @@
 	-webkit-transition-duration: .4s;
 }
 .mblRevealv.mblOut {
-	z-index: 0;
 	-webkit-transform: translate3d(0px,0%,0px) !important;
 }
 .mblRevealv.mblOut.mblTransition {
