--- a/mobile/themes/common/transitions/swap.css
+++ b/mobile/themes/common/transitions/swap.css
@@ -16,7 +16,6 @@
 }
 @-webkit-keyframes mblSwapOut {
 	0% {
-		z-index: 0;
 		-webkit-transform: translate3d(0%,0%,0px) scale(1.0);
 		opacity: 1;
 	}
@@ -43,14 +42,12 @@
 		opacity: 1;
 	}
 	100% {
-		z-index: 0;
 		-webkit-transform: translate3d(0%,0%,0px) scale(1.0);
 		opacity: 1;
 	}
 }
 @-webkit-keyframes mblSwapOutReverse {
 	0% {
-		z-index: 0;
 		-webkit-transform: translate3d(0%,0%,0px) scale(1.0);
 		opacity: 1;
 	}
@@ -77,7 +74,6 @@
 		opacity: 1;
 	}
 	100% {
-		z-index: 0;
 		-webkit-transform: translate3d(0%,0%,0px) scale(1.0);
 		opacity: 1;
 	}
